fix:  Legend - Maps: Thumbnails are being stretched

--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -240,6 +240,7 @@
   margin-right: 7px;
   margin-bottom: 8px;
   cursor: pointer;
+  background-size: cover;
 }
 
 .sidebar__view-thumb:nth-child(3n) {
@@ -254,6 +255,7 @@
   margin-right: 7px;
   margin-bottom: 8px;
   cursor: pointer;
+  background-size: cover;
 }
 
 .sidebar__overlay-thumb:nth-child(3n) {
